@@ -41,7 +41,6 @@ export(isUnix)
 export(isWindows)
 export(last)
 export(lib)
-export(listToShortString)
 export(load2)
 export(lsort)
 export(makeDataFrame)
@@ -67,7 +66,6 @@ export(setColNames)
 export(setRowNames)
 export(splitTime)
 export(stopf)
-export(stringsAsFactors)
 export(strrepeat)
 export(suppressAll)
 export(system3)
